# dprint-plugin-cedar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
