[package]
name = "dprint-plugin-cedar"
version = "0.1.0"
authors = ["Troy Benson <troy@scuffle.cloud>"]
edition = "2024"
homepage = "https://github.com/scufflecloud/dprint-plugin-cedar"
keywords = ["formatting", "formatter", "cedar"]
license = "MIT"
repository = "https://github.com/scufflecloud/dprint-plugin-cedar"
description = "Cedar formatter for dprint."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[dependencies]
anyhow = "1"
cedar-policy-formatter = "4.6"
dprint-core = { version = "0.67", features = ["wasm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
